Fix tiny gap below main when right content-wrapper was taller than the menu

--- a/app/assets/stylesheets/layout/_base.sass
+++ b/app/assets/stylesheets/layout/_base.sass
@@ -127,9 +127,11 @@ body
   margin: 0 0 0 0
   overflow: hidden
   width: 100%
-  height: 100%
   z-index: 10
   background-color: #fff
+
+  %absolute-layout-mode &
+    height: 100%
 
 
 .-draggable
